Fixed spacing

--- a/theme.scss
+++ b/theme.scss
@@ -260,3 +260,11 @@ img.icon-cc {
 .address-line {
   display: block;
 }
+
+.container.content-pages-show-basic-wide {
+  margin-left: 15em;  
+  margin-right: 50em;  
+
+}
+
+
